--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             <div class="popup-box">
                 <span class="close-x" onclick="closePopup('popup1')">×</span>
                 <img src="Poster.jpg" class="popup-img">
-                <p>This poster was created for my Unit 3 “Create a Media Product” assignment.</p>
+                <p>This poster was created for my Unit 3 “Create a Media Product” assignment. I took the photo using my Samsung Galaxy S21 5G and edited the final design in Picsart. My aim was to make something clean, visually appealing and easy to understand at a glance. I’m proud of how the overall layout and style turned out.</p>
             </div>
         </div>
 
@@ -219,7 +219,7 @@
             <div class="popup-box">
                 <span class="close-x" onclick="closePopup('popup2')">×</span>
                 <img src="Billboard.jpg" class="popup-img">
-                <p>This billboard design was also part of my Unit 3 “Create a Media Product” unit.</p>
+                <p>This billboard design was also part of my Unit 3 “Create a Media Product” unit. I used my Samsung Galaxy S21 5G to take the original photo and edited everything in Picsart. I wanted the design to look bold, simple and visually clear, just like a real billboard should. I’m happy with how professional and eye‑catching it looks.</p>
             </div>
         </div>
 
@@ -229,7 +229,7 @@
             <div class="popup-box">
                 <span class="close-x" onclick="closePopup('popup3')">×</span>
                 <img src="Instagram.jpg" class="popup-img">
-                <p>This Instagram layout was another piece from my Unit 3 unit.</p>
+                <p>This Instagram layout was another piece from my Unit 3 “Create a Media Product” unit. I took the photos on my Samsung Galaxy S21 5G and edited them using Picsart. My goal was to create a clean, modern and visually appealing social media design. I’m proud of how well the colours and layout work together.</p>
             </div>
         </div>
 
@@ -239,7 +239,7 @@
             <div class="popup-box">
                 <span class="close-x" onclick="closePopup('popup4')">×</span>
                 <img src="Scarf.jpg" class="popup-img">
-                <p>This photo was created for my Unit 8 "Photography" unit.</p>
+                <p>This photo was created for my Unit 8 "Photography" unit. I shot it using my Samsung Galaxy S21 5G and edited the final image in Picsart. I wanted the picture to look clean and visually appealing while keeping the focus on the scarf. I’m pleased with how sharp and well‑composed the final image is.</p>
             </div>
         </div>
 
@@ -249,7 +249,7 @@
             <div class="popup-box">
                 <span class="close-x" onclick="closePopup('popup5')">×</span>
                 <img src="Vogue.jpg" class="popup-img">
-                <p>This Vogue‑style photo was also part of my Unit 8 unit.</p>
+                <p></p>This Vogue‑style photo was also part of my Unit 8 "Photography" unit. I used my Samsung Galaxy S21 5G to take the picture and edited it in Picsart. My aim was to create a clean, stylish and visually appealing image inspired by fashion magazine photography. I’m proud of how polished and professional it looks.</p>
             </div>
         </div>
 
